argocd/sommelier/http-proxy/resources.yaml
---
apiVersion: v1
kind: Service
metadata:
  namespace: http-proxy
  name: http-proxy
spec:
  type: LoadBalancer
  loadBalancerClass: io.cilium/l2-announcer
  ports:
    - name: http
      port: 3128
      targetPort: 3128
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: http-proxy
  name: http-proxy
spec:
  template:
    spec:
      containers:
        - name: app
          image: ubuntu/squid:latest
          volumeMounts:
            - name: config
              subPath: squid.conf
              mountPath: /etc/squid/squid.conf
              readOnly: true
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            runAsUser: 1001
            seccompProfile:
              type: RuntimeDefault
          ports:
            - name: http
              containerPort: 3128
          resources:
            requests:
              cpu: 100m
              memory: 512Mi
            limits:
              cpu: 100m
              memory: 512Mi
      volumes:
        - name: config
          configMap:
            name: http-proxy-config
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  namespace: http-proxy
  name: http-proxy
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: http-proxy
      app.kubernetes.io/instance: http-proxy
  policyTypes:
    - Egress
  egress:
    # node-exporter
    - ports:
        - port: 9100
    # all other exporters
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: bacchus-sgs
